tests/e2e/semantics/arg_type_no_object2.error
Error: syntax error in story at line 1, column 20

1|    function foo a:int b:object returns int
                         ^^^^^^^^

E0160: Function argument `b` cannot be of type `Object`.
