tests/e2e/semantics/arg_type_no_object2.story
function foo a:int b:object returns int
    b = 1
    return 1
